--- a/excursion/resources/css/style.css
+++ b/excursion/resources/css/style.css
@@ -1,6 +1,7 @@
 body{
   font-family: Verdana;
   background-color: black;
+  color: white;
 }
 
 h1{
@@ -13,4 +14,14 @@ h1{
 .link{
   color: Aquamarine;
   font-size: 16px;
+}
+
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+
+p{
+  font-size: 21px;
+  color: grey;
 }
